--- a/vienna-50m/lib/default.css
+++ b/vienna-50m/lib/default.css
@@ -5,6 +5,14 @@ body {
 	font-size: 10pt;
 }
 
+#title {
+	font-size: 12pt;
+	font-weight: bold;
+	margin: 10px 0px 7px 0px;
+	width: 100%;
+	height: 20px;
+}
+
 #controls {
 	width: 10%;
 	height: 100%;
@@ -13,7 +21,7 @@ body {
 }
 
 #controls .legend {
-	margin: 15px 0px 15px 0px;
+	margin: 0px 0px 15px 0px;
 	font-family: Tahoma, sans-serif;
 	font-size: 10pt;
 }
@@ -25,14 +33,14 @@ body {
 
 #coronamap {
 	width: 88%;
-	height: 91%;
+	height: 90%;
 	border: 1px solid silver;
 }
 
 #footer {
 	float: clear;
 	width: 100%;
-	height: 7%;
+	height: 20px;
 	margin: 0px;
 	padding: 15px 0px 5px 0px;
 	text-align: left;
